Update page styling

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="page-heading">Sebhastien.com</h1>
-    <div class="topnav">
-      <a class="nav-link" href="./pages/about.html">About</a>
-      <a class="nav-link" href="./pages/blog.html">Blog</a>
-      <a class="nav-link" href="./pages/projects.html">Projects</a>
-      <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
-      <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
-       
+    <div class="site-header">
+      <h1 class="page-heading">Sebhastien.com</h1>
+    </div>
+      <div class="top-nav">
+        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="./pages/blog.html">Blog</a>
+        <a class="nav-link" href="./pages/projects.html">Projects</a>
+        <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
+      </div>
     </div>
   </div>
 
