--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,17 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Sebhastien</title>
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Blog | Sebhastien</title>
 </head>
 <body>
-  <h1>Blog</h1>
-  <div class="topnav">
-    <a href="#">About</a>
-    <a href="#">Blog</a>
-    <a href="#">Projects</a>
+  <div class="container">
+    <div class="site-header">
+      <h1 class="page-heading">Sebhastien.com | Blog</h1>
+    </div>
+      <div class="top-nav">
+        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link active" href="./blog.html">Blog</a>
+        <a class="nav-link" href="./projects.html">Projects</a>
+        <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
+      </div>
+    </div>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
