Remove 'Blog' from blog page header

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="site-header">
-      <h1 class="page-heading">Sebhastien.com | Blog</h1>
+      <h1 class="page-heading">Sebhastien.com</h1>
     </div>
       <div class="top-nav">
         <a class="nav-link" href="../index.html">Home</a>
