Beef up site; Write first blog post

--- a/index.html
+++ b/index.html
@@ -10,18 +10,51 @@
 </head>
 <body>
   <div class="container">
-    <div class="site-header">
-      <h1 class="page-heading">Sebhastien.com</h1>
-    </div>
-      <div class="top-nav">
-        <a class="nav-link active" href="/">Home</a>
-        <a class="nav-link" href="./pages/projects.html">Projects</a>
-        <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
-        <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
-      </div>
-    </div>
+    <header class="site-header">
+      <h2 class="page-heading">Sebhastien.com</h2>
+    </header>
+    <nav class="top-nav">
+      <a class="nav-link active" href="/">Home</a>
+      <a class="nav-link" href="./pages/blog.html">Blog</a>
+      <a class="nav-link" href="./pages/projects.html">Projects</a>
+      <a class="nav-link" href="./pages/tools.html">Tools</a>
+      <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
+    </nav>
+    <section class="main-content">
+      <div class="content-container">
+        <h1 class="content-header">About</h1>
+        <p>This site is a collection of <a class="content-link" href="./pages/blog.html">web logs</a>, <a class="content-link" href="./pages/projects.html">projects I'm working on</a> and <a class="content-link" href="./pages/tools.html">tools</a> you can use.</p>
+        <p>Currently, I'm leading the Strategic Finance team at <a class="content-link" href="https://zapier.com" target="_blank">Zapier</a>. We help teams throughout the organization translate operational data into useful financial insights. </p>
+        <br>
+        <div class="content-body">
+          <div class="content-block">
+            <h2 class="content-header">My Tech Stack</h2>
+            <p>Here is a list of my favorite technologies to use:</p>
+            <ul>
+              <li>Ruby on Rails</li>
+              <li>React.JS</li>
+              <li>React Native</li>
+            </ul>
+          </div>
+          <div class="content-block">
+            <h2 class="content-header">Learning List</h2>
+            <p>Here are the things that are up next on my learning "To Do" list:</p>
+            <ul>
+              <li>Next.JS</li>
+              <li>Supabase</li>
+              <li>Hotwire: Turbo and Stimulus</li>
+              <li>Flutter</li>
+              <li>Django</li>
+              <li>Vue</li>
+              <li>iOS</li>
+              <li>Android</li>
+              <li>Rust</li>
+            </ul>
+          </div>
+        </div>
+    </section>
   </div>
-
   <script src="js/main.js"></script>
 </body>
 </html>
