--- a/pages/tools.html
+++ b/pages/tools.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Projects | Sebhastien</title>
+  <title>Tools | Sebhastien</title>
 </head>
 <body>
   <div class="container">
@@ -16,13 +16,13 @@
     <nav class="top-nav">
       <a class="nav-link" href="../index.html">Home</a>
       <a class="nav-link" href="./blog.html">Blog</a>
-      <a class="nav-link active" href="./projects.html">Projects</a>
-      <a class="nav-link" href="./tools.html">Tools</a>
+      <a class="nav-link" href="./projects.html">Projects</a>
+      <a class="nav-link active" href="./tools.html">Tools</a>
       <a class="nav-link" href="https://linkedin.com/in/sebhastien" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a class="nav-link" href="https://twitter.com/sebhastien" target="_blank"><i class="fa fa-twitter"></i></a>
     </nav>
     <section>
-      <h1>Projects</h1>
+      <h1>Tools</h1>
       <p>Coming Soon!</p>
     </section>
   </div>
